--- a/_site.yml
+++ b/_site.yml
@@ -4,7 +4,7 @@ output_dir: "."
 navbar:
   title: "Home"
   right:
-    - text: "About"
+    - text: "Introduction"
       href: about.html
     - text: "Analyses"
       href: dashboard.html
