--- a/_site.yml
+++ b/_site.yml
@@ -10,9 +10,7 @@ navbar:
       href: casulties.html
     - text: "Prevention Outcomes"
       href: preventions.html
-    - text: "Dashboard"
-      href: dashboard.html
-    - text: "Conclusion"
+    - text: "Discussion"
       href: final_report.html
     - text: "Contact Us"
       menu:
