--- a/_site.yml
+++ b/_site.yml
@@ -25,7 +25,7 @@ navbar:
     - icon: fa-github fa-lg
       href: https://github.com/dianaesai/p8105_final_project.git
     - icon: fa-youtube fa-lg
-      href: https://www.youtube.com/watch?v=oHg5SJYRHA0
+      href: https://www.youtube.com/watch?v=ljRSoNMDeso&ab_channel=MatthewAngulo
     
 
 output:
